--- a/LoanManagementSystem/Views/User/Login.cshtml
+++ b/LoanManagementSystem/Views/User/Login.cshtml
@@ -7,32 +7,48 @@
 @using (Html.BeginForm("Login", "User", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <section id="loginForm" class="center-block">
-        <div class="col-md-4">&nbsp;</div>
-         <div class="col-md-5">
-            <div class="form-group">
-                <div class="col-md-10">
-                    @Html.LabelFor(m => m.UserName)
+
+<div class="in-form">
+    @Html.LabelFor(m => m.UserName)
                     @Html.TextBoxFor(m => m.UserName, new { @class = "form-control", @placeholder = "Enter email" })
                     @Html.ValidationMessageFor(m => m.UserName)
-                </div>
-            </div>
-            <div class="form-group">
-
-                <div class="col-md-10">
-                    @Html.LabelFor(m => m.Password)
+        @Html.LabelFor(m => m.Password)
                     @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Enter password" })
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-md-7">
-                    @Html.ActionLink("Register as a new user", "Create")
-                </div>
-                <div class="col-md-3">
-                    <button type="submit" class="btn btn-default">Submit</button>
-                </div>
+    
+    <div class="check-sub">
+        <input type="submit" value="Login">
+        <p>@Html.ActionLink("Register as a new user", "Create")</p>
+        <p style="color: maroon!important">@Html.ValidationSummary(true)</p>
+    </div>
+</div>
+@*
+
+<section id="loginForm" class="center-block">
+    <div class="col-md-4">&nbsp;</div>
+    <div class="col-md-5">
+        <div class="form-group">
+            <div class="col-md-10">
+                @Html.LabelFor(m => m.UserName)
+                    @Html.TextBoxFor(m => m.UserName, new { @class = "form-control", @placeholder = "Enter email" })
+                    @Html.ValidationMessageFor(m => m.UserName)
             </div>
         </div>
-        <div class="col-md-3"></div>
-    </section>
+        <div class="form-group">
+
+            <div class="col-md-10">
+                @Html.LabelFor(m => m.Password)
+                    @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Enter password" })
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-7">
+            </div>
+            <div class="col-md-3">
+                <button type="submit" class="btn btn-default">Submit</button>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-3"></div>
+</section>
+*@
 }
